fix font size too large

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -38,7 +38,7 @@
         ._button {
             margin: 0 $margin;
 
-            font-size: 20px;
+            font-size: 16px;
             text-decoration: underline;
             cursor: pointer;
 
